# ren-ts

./: .gitignore  PROGRESS.md  README.md  REFACTOR.md  TODO.md  deno.json  eslint.config.js  eslint.config.ts  index.html  log  package.json  prompt.md  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: filesystem-architecture.md
rpy-migrate-tool/: Tools.tsx  converterFs.ts  rpaReader.ts  rpycReader.ts  translationCache.ts  zipRpyMigrateTool.tsx
rpy-rrs-bridge/: minigame-detect.ts  rpy2rrs-core.ts  rpyc-decompile.py  rpyc2rrs-core.ts  scan-assets-core.ts
rrs/: SYNTAX.md  ast.ts  codegen.ts  index.ts  literal.ts  parser.ts
scripts/: build-ddlc-zip.py  convert-rpyc.ts  convert_aftersx.py  debug-rpyc.ts  gen_animated_cg.py  rpy2rrs.ts  rpyc2rrs.ts  survey_cmds.py  validate_assets.py
src/: App.tsx  assets.ts  audio.ts  cg_animated_sequences.json  cg_sequences.json  converter.ts  converterFs.ts  engine.ts  evaluate.ts  filesystem.ts  index.css  llmTranslate.ts  loader.ts  main.tsx  pickle.ts  rpycReader.ts  save.ts  saveStore.ts  store.ts  tauri_bridge.ts  textParser.tsx  translationCache.ts  types.ts  vars.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  rpa.rs  rpy2rrs_command.rs
src-tauri/src/rpy2rrs/: mod.rs
src-tauri/src/rpy2rrs/pickle/: helpers.rs  mod.rs
src-tauri/src/rpy2rrs/rpy/: converter.rs  minigame.rs  mod.rs
src-tauri/src/rpy2rrs/rpyc/: converter.rs  mod.rs
tests/: codegen.spec.ts  engine.spec.ts  evaluate.spec.ts  (+9 more)
(+75 files in other folders)
